// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateField has custom yearMax and yearMin 1`] = `
<fieldset
  className="ds-c-fieldset"
>
  <legend
    className="ds-c-label"
    htmlFor={undefined}
    id="datefield_label_snapshot"
  >
    <span
      className=""
    >
      Date
    </span>
    <span
      className="ds-c-field__hint"
    >
      For example: 4 / 28 / 1986
    </span>
  </legend>
  <div
    className="ds-l-form-row ds-u-align-items--end"
  >
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Month
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--month"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="month"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Day
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--day"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="day"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Year
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--year"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="year"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</fieldset>
`;

exports[`DateField has errorMessage 1`] = `
<fieldset
  className="ds-c-fieldset"
>
  <legend
    className="ds-c-label"
    htmlFor={undefined}
    id="datefield_label_snapshot"
  >
    <span
      className=""
    >
      Date
    </span>
    <span
      className="ds-c-field__hint"
    >
      For example: 4 / 28 / 1986
    </span>
    <span
      className="ds-c-field__hint ds-u-color--error"
      id="undefined-message"
      role="alert"
    >
      This is required.
    </span>
  </legend>
  <div
    className="ds-l-form-row ds-u-align-items--end"
  >
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Month
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--month"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="month"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Day
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--day"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="day"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Year
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--year"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="year"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</fieldset>
`;

exports[`DateField has invalid day 1`] = `
<fieldset
  className="ds-c-fieldset"
>
  <legend
    className="ds-c-label"
    htmlFor={undefined}
    id="datefield_label_snapshot"
  >
    <span
      className=""
    >
      Date
    </span>
    <span
      className="ds-c-field__hint"
    >
      For example: 4 / 28 / 1986
    </span>
  </legend>
  <div
    className="ds-l-form-row ds-u-align-items--end"
  >
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Month
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--month"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="month"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Day
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--day ds-c-field--error"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="day"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Year
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--year"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="year"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</fieldset>
`;

exports[`DateField has invalid month 1`] = `
<fieldset
  className="ds-c-fieldset"
>
  <legend
    className="ds-c-label"
    htmlFor={undefined}
    id="datefield_label_snapshot"
  >
    <span
      className=""
    >
      Date
    </span>
    <span
      className="ds-c-field__hint"
    >
      For example: 4 / 28 / 1986
    </span>
  </legend>
  <div
    className="ds-l-form-row ds-u-align-items--end"
  >
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Month
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--month ds-c-field--error"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="month"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Day
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--day"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="day"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Year
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--year"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="year"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</fieldset>
`;

exports[`DateField has invalid year 1`] = `
<fieldset
  className="ds-c-fieldset"
>
  <legend
    className="ds-c-label"
    htmlFor={undefined}
    id="datefield_label_snapshot"
  >
    <span
      className=""
    >
      Date
    </span>
    <span
      className="ds-c-field__hint"
    >
      For example: 4 / 28 / 1986
    </span>
  </legend>
  <div
    className="ds-l-form-row ds-u-align-items--end"
  >
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Month
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--month"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="month"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Day
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--day"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="day"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Year
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--year ds-c-field--error"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="year"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</fieldset>
`;

exports[`DateField has requirementLabel 1`] = `
<fieldset
  className="ds-c-fieldset"
>
  <legend
    className="ds-c-label"
    htmlFor={undefined}
    id="datefield_label_snapshot"
  >
    <span
      className=""
    >
      Date
    </span>
    <span
      className="ds-c-field__hint"
    >
      Optional.
       
      For example: 4 / 28 / 1986
    </span>
  </legend>
  <div
    className="ds-l-form-row ds-u-align-items--end"
  >
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Month
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--month"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="month"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Day
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--day"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="day"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Year
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--year"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="year"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</fieldset>
`;

exports[`DateField is inversed 1`] = `
<fieldset
  className="ds-c-fieldset"
>
  <legend
    className="ds-c-label ds-c-label--inverse"
    htmlFor={undefined}
    id="datefield_label_snapshot"
  >
    <span
      className=""
    >
      Date
    </span>
    <span
      className="ds-c-field__hint ds-c-field__hint--inverse"
    >
      For example: 4 / 28 / 1986
    </span>
  </legend>
  <div
    className="ds-l-form-row ds-u-align-items--end"
  >
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1 ds-c-label--inverse"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Month
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--inverse ds-c-field--month"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="month"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1 ds-c-label--inverse"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Day
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--inverse ds-c-field--day"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="day"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1 ds-c-label--inverse"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Year
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--inverse ds-c-field--year"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="year"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</fieldset>
`;

exports[`DateField renders with all defaultProps 1`] = `
<fieldset
  className="ds-c-fieldset"
>
  <legend
    className="ds-c-label"
    htmlFor={undefined}
    id="datefield_label_snapshot"
  >
    <span
      className=""
    >
      Date
    </span>
    <span
      className="ds-c-field__hint"
    >
      For example: 4 / 28 / 1986
    </span>
  </legend>
  <div
    className="ds-l-form-row ds-u-align-items--end"
  >
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Month
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--month"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="month"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Day
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--day"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="day"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
    <span
      className="ds-c-datefield__separator"
    >
      /
    </span>
    <div
      className="ds-u-clearfix ds-l-col--auto"
    >
      <label
        className="ds-c-label ds-u-font-weight--normal ds-u-margin-top--1"
        htmlFor="textfield_snapshot"
        id="textfield_label_snapshot"
      >
        <span
          className=""
        >
          Year
        </span>
      </label>
      <input
        aria-describedby="datefield_label_snapshot"
        aria-label={undefined}
        className="ds-c-field ds-c-field--year"
        defaultValue={undefined}
        id="textfield_snapshot"
        inputMode="numeric"
        name="year"
        onBlur={undefined}
        onChange={undefined}
        pattern="[0-9]*"
        rows={undefined}
        type="text"
        value={undefined}
      />
    </div>
  </div>
</fieldset>
`;
